# Madison_AI_Tools

./: .gitattributes  .gitignore  ARCHITECTURE.md  BRAINSTORM_15_IDEAS.md  BUG_REPORT.md  CHECKLIST.md  COMMIT_MSG.tmp  FEATURE_IDEAS.md  HEALTH_REPORT.md  MASTER_REPO_REPORT.md  QA_REPORT.md  QA_REPORT_2.md  README.md  TASKS.md  last_character_prompt.txt  pyproject.toml  requirements.txt  run.bat
.repo_snapshot/: repo_comprehensive_report.md  repo_snapshot.json  repo_snapshot.md
.repo_snapshot/health_reports/: health_history.csv  health_metrics__20260329_102917.json  health_report__latest.md
STYLE_LIBRARY/Glicth/: meta.json
STYLE_LIBRARY/Phil UI/: meta.json
STYLE_LIBRARY/Robo UI/: meta.json
docs/: phase1-manual-test-steps.txt  phase1_test_progress.md
electron/: main.js  preload.js
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: app.css  app.tsx  main.tsx  vite-env.d.ts
frontend/src/hooks/: ActivePageContext.tsx  ArtDirectorContext.tsx  ArtboardContext.tsx  CustomSectionsContext.tsx  FavoritesContext.tsx  GenerationStatusContext.tsx  ModelsContext.tsx  PromptOverridesContext.tsx  SessionContext.tsx  ToastContext.tsx  useApi.ts  useArtboardSync.ts  useClipboardPaste.ts  useCostTracker.ts  useCustomSectionState.ts  useImageEnhance.ts  useSettingsBackup.ts  useShortcuts.tsx  useToast.ts  (+2 more)
scripts/: check_task.py  test_retexture.py
scripts/blender/: apply_texture.py  combine_meshes.py  convert_to_glb.py  extract_pbr_maps.py  project_decal.py  render_ortho_views.py  render_uv_atlas.py
src/pubg_madison_ai_suite/: __init__.py  cli.py  dark_theme.py  suite.py
tests/: test_grid_square_cells.py
(+139 files in other folders)
