[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "pubg-madison-ai-suite"
version = "2.1.0"
description = "PUBG Madison AI Suite – internal image-generation tools"
requires-python = ">=3.9"
dependencies = [
  "google-generativeai>=0.8.0",
  "google-genai>=0.6.0",
  "pillow>=10.0.0",
  "rembg>=2.0.50",
  "PyPDF2>=3.0.0",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
pubg_madison_ai_suite = "pubg_madison_ai_suite.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pubg_madison_ai_suite"]
include = [
  "src/pubg_madison_ai_suite/assets/**",
  "src/pubg_madison_ai_suite/tools/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/pubg_madison_ai_suite/**",
]
